--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'tyrantgit:explosionfield:1.0.1'
 
 
     testImplementation 'junit:junit:4.+'
